# gvr-sys

./: Cargo.toml  README.md  build.rs  generate_bindings.sh
gvr/: LICENSE  wrapper.h
gvr/headers/vr/gvr/capi/include/: gvr.h  gvr_audio.h  gvr_audio_surround.h  gvr_controller.h  gvr_gesture.h
src/: bindings.rs  bindings_android.rs  lib.rs
