[package]
name = "gvr-sys"
description = "Rust bindings for Google VR SDK"
version = "0.1.0"
authors = ["Imanol Fernandez <mortimergoro@gmail.com>", "Google VR Team"]
build = "build.rs"

homepage = "https://github.com/MortimerGoro/gvr-sys"
repository = "https://github.com/MortimerGoro/gvr-sys"
keywords = ["vr", "daydream", "cardboard", "sdk", "google"]
license = "Apache-2.0"

[build-dependencies]
bindgen = "0.22.0"
